--- a/Fundamentos Web/Primeiros exercicios em HTML5/pagina1.html
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/pagina1.html
@@ -7,9 +7,30 @@
     <title>Primeira Página Web Generation</title>
 </head>
 <body>
-    <h1>Construção da minha prmeira página usando HTML5</h1>
+    <h1>Sobre mim:</h1>
+    <p>
+        Me chamo Lucas, tenho 19 anos curso Gestão da Tecnlogia da Informação, atualmente estou no 4° semestre e também participo de bootcamp generation Brasil
+    </p>
+
+    <h2>Construção da minha prmeira página usando HTML5</h2>
     <p>
         Inicialmente esta pagina está sendo criada usando apenas HTML5 de maneira pura, e será aprimorada conforme novos ensinamentos forem aprendidos
     </p>
+
+    <h3>Informações para contato</h3>
+    <ul>
+        <li>
+            <a href ="https://www.linkedin.com/in/lucaslmsc/" target="_blank">LinkedIn</a>
+        </li>
+
+        <li>
+            <a href= "https://github.com/LucasLM1" target="_blank">GitHub</a>
+        </li>
+
+        <li>
+            <a href = "pagina2.html">Mais Informações</a>
+        </li>
+    </ul>
+
 </body>
 </html>
