--- a/Fundamentos Web/Primeiros exercicios em HTML5/pagina2.html
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/pagina2.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Página</title>
+    <title>Mais Infor,ações</title>
 </head>
 <body>
-    <h1>Sobre as expectativas do bloco 3- Front-end</h1>
-    <p>Espero que neste módulo eu tenha um bom aprendizado sobre tudo que é apresentado e proposto dentro do bootcamp da Generation Brasil</p>
+    <h1>Entre em contato comigo</h1>
+    <form action="">
+        <p align ="center"></p>
+            <label for ="nome">Nome:</label>
+            <input type="text" id= "nome" required><br><br>
+
+            <label for ="email">Email:</label>
+            <input type="email" id= "email" required><br><br>
+
+            <label for ="assunto">Assunto:</label>
+            <textarea name="" id="" cols="20" rows="5"></textarea><br><br>
+
+        
+        <button>Enviar</button>
+        </p>
+    </form>
+
+
+    <h2>Sobre a  <a href = "https://brazil.generation.org/">Generation Brasil </a></h2>
+    <p>
+        <img src = "logoGen.png" alt="logo Generation"><br>
+        Bootcamp voltado para pessoas que queriam ter uma carreria na área de desenvolvimento de softwares e aplicativos mobile <br> 
+
+        <ul>
+            <li>
+               <a href = "pagina1.html">Página Inicial</a>
+            </li>
+        </ul>
+    </p>
 </body>
 </html>
