Atualização com JavaScript

--- a/Fundamentos Web/Primeiros exercicios em HTML5/pagina1.html
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/pagina1.html
@@ -33,7 +33,7 @@
                 alguns frameworks e atualmente HTML5, CSS3 e JavaScript.
             </p> 
             <p class = "center2">
-                Isso tudo no intuito de me tornar um Desesnvolvedor Fullstack Java Jr!
+                Isso tudo no intuito de me tornar um Desenvolvedor Fullstack Java Jr!
             </p>   
         </div>
         
