Validação do formulário em Js

--- a/Fundamentos Web/Primeiros exercicios em HTML5/pagina2.html
+++ b/Fundamentos Web/Primeiros exercicios em HTML5/pagina2.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class = "bntEnviar">
-                <button>Enviar</button>
+                <button onclick="enviar()">Enviar</button>
             </div>
         </form>
     </div>
