--- a/Bootstrap/SiteCompleto.html
+++ b/Bootstrap/SiteCompleto.html
@@ -14,11 +14,22 @@
   <link rel="shortcut icon"
     href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSO5vxYlO2Y8SEsuvAY_yt8smz6KH6KYPBcmw&usqp=CAU">
   <!--Icone que aparece antes do titulo da página-->
+  <!--<link rel="stylesheet" href="../Bootstrap/css/style.css">-->
+  <style>
+    body {
+      background-color: rgba(58, 58, 58, 0.068);
+    }
+
+    .imgRedes {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
 </head>
 
 <body>
   <!--Menu-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-info">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-info">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">LM Webmotors&reg</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -38,13 +49,13 @@
             </a>
 
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="https://github.com/LucasLM1" target="_blank">GitHub</a></li>
-              <li><a class="dropdown-item" href="https://www.instagram.com/lucxs.lm_/" target="_blank">Instagram</a>
+              <li><a class="dropdown-item" href="#marcas">Nossos parceiros</a></li>
+              <li><a class="dropdown-item" href="#motorgrid">Motorgrid</a>
               </li>
               <li>
-                <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="https://www.linkedin.com/in/lucaslmsc/" target="_blank">LinkedIn</a>
+              <li><a class="dropdown-item" href="#redes">Redes
+                  Socias</a>
               </li>
             </ul>
           </li>
@@ -109,8 +120,8 @@
   <!--/Jumbotron-->
 
   <div class="container">
-
     <!--Grupo de cards1-->
+    <h1 id ="marcas"></h1>
     <div class="card-group">
       <!--padding com espaço lateral de 3px-->
       <div class="card">
@@ -218,6 +229,7 @@
 
 
     <!--Texto e video-->
+    <h1 id= "motorgrid"></h1>
     <div class="row mt-5 mb-5">
       <div classs="col-md-6">
         <h3>Apresentação do Motorgrid Brasil</h3>
@@ -242,42 +254,89 @@
       </div>
     </div>
     <!--Texto e video-->
-  </div>
 
-  <footer>
-
-    <div class="row mb-3">
-      <div class="col-md-12 d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/lucaslmsc/" target="_blank" class="p-3">
-          <img class="imgRedes" src="../Bootstrap/Midia/linkedin.png" alt="LinkedIn">
-        </a>
-
-        <a href="https://github.com/LucasLM1" target="_blank">
-          <img class="imgRedes" src="../Bootstrap/Midia/GitHub.png" alt="GitHub" class="p-3">
-        </a>
-
-        <a href="https://www.instagram.com/lucxs.lm_/" target="_blank">
-          <img class="imgRedes" src="../Bootstrap/Midia/Instagram.png" alt="Instagram" class="p-3">
-        </a>
+    <!--Entre em contato comigo-->
+    <div class="row mb-5">
+      <div class="col-md-12">
+        <h4 class="text-center">
+          Entre em contato comigo
+        </h4>
       </div>
     </div>
 
-   <div class ="row">
-     <div class = "col-md-12">
-      <p class = "text-center">
-        <b>Todos os Direitos reservados: Lucas M &copy</b>
-      </p>
-     </div>
-   </div>
+    <div class="row d-flex align-items-center">
+      <div class="col-md-6">
+        <form>
+          <div class="form-group">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" class="form-control" placeholder="Nome" onkeyup="validaNome()">
+            <div id='txtNome'></div>
+          </div>
 
-  </footer>
+          <div class="form-group">
+            <label for="email">Endereço de email</label>
+            <input type="email" class="form-control" id="email" placeholder="nome@exemplo.com" onkeyup="validaEmail()">
+            <div id='txtEmail'></div>
+          </div>
 
+          <div class="form-group">
+            <label for="assunto">Assunto</label>
+            <textarea class="form-control" id="assunto" rows="3" onkeyup="validaAssunto()"></textarea>
+            <div id='txtAssunto'></div>
+          </div>
+
+          <div class="form-group d-flex justify-content-center p-3">
+            <button class="btn btn-outline-success" onclick="enviar()">Enviar</button>
+          </div>
+        </form>
+      </div>
+
+      <div class="col-md-6">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.854542746193!2d-46.67865418538356!3d-23.573667067931133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5764949683bf%3A0x9d6682549c775e1c!2sAv.%20Europa%2C%20218-288%20-%20Jardim%20Europa%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001449-001!5e0!3m2!1spt-BR!2sbr!4v1629483880902!5m2!1spt-BR!2sbr"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id='mapa'></iframe>
+      </div>
+    </div>
+    <!--/Entre em contato comigo-->
+
+
+    <footer>
+      <h1 id= "redes"></h1>
+      <div class="row mb-3">
+        <div class="col-md-12 d-flex justify-content-center">
+          <a href="https://www.linkedin.com/in/lucaslmsc/" target="_blank" class="p-3">
+            <img class="imgRedes" src="../Bootstrap/Midia/linkedin.png" alt="LinkedIn">
+          </a>
+
+          <a href="https://github.com/LucasLM1" target="_blank" class="p-3">
+            <img class="imgRedes" src="../Bootstrap/Midia/GitHub.png" alt="GitHub">
+          </a>
+
+          <a href="https://www.instagram.com/lucxs.lm_/" target="_blank" class="p-3">
+            <img class="imgRedes" src="../Bootstrap/Midia/Instagram.png" alt="Instagram">
+          </a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <p class="text-center">
+            <b>Todos os Direitos reservados: Lucas M &copy</b>
+          </p>
+        </div>
+      </div>
+
+    </footer>
+  </div>
 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
+
+    <script type="text/javascript" src="../Bootstrap/js/script.js"></script>
+
 </body>
 
 </html>
