--- a/Bootstrap/SiteCompleto.html
+++ b/Bootstrap/SiteCompleto.html
@@ -118,10 +118,10 @@
     </div>
   </div>
   <!--/Jumbotron-->
-
+<h3 id="marcas"></h3>
   <div class="container">
     <!--Grupo de cards1-->
-    <h1 id ="marcas"></h1>
+    <h3>Nossos parceiros</h3>
     <div class="card-group">
       <!--padding com espaço lateral de 3px-->
       <div class="card">
@@ -286,7 +286,7 @@
           </div>
 
           <div class="form-group d-flex justify-content-center p-3">
-            <button class="btn btn-outline-success" onclick="enviar()">Enviar</button>
+            <button class="btn btn-outline-success" onclick='enviar()'>Enviar</button>
           </div>
         </form>
       </div>
